--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -4,14 +4,14 @@ FROM node:20-alpine
 # Set working directory inside the container
 WORKDIR /app
 
-# Copy only package.json and lock file to install deps first
-COPY package*.json ./
+# Copy only the admin subdirectory (your actual app)
+COPY admin ./admin
+
+# Set working directory to admin inside container
+WORKDIR /app/admin
 
 # Install dependencies
 RUN npm install --frozen-lockfile
-
-# Copy the full project files into the container
-COPY . .
 
 # Build the Next.js project
 RUN npm run build
