--- a/admin/package.json
+++ b/admin/package.json
@@ -17,11 +17,16 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@tanstack/react-query": "^5.81.4",
+    "antd": "^5.26.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.524.0",
     "next": "15.3.4",
     "react": "^19.0.0",
+    "react-date-range": "^2.0.1",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
